codepkg/objects/NDepartment__c.object
<CustomObject>
    <fields>
        <fullName>AverageSalary__c</fullName>
        <formula>SumSalary__c /  Count_Employee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AverageSalary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Employee_WorkFlow__c</fullName>
        <label>Count Employee WorkFlow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Employee__c</fullName>
        <label>Count Employee</label>
        <summaryForeignKey>NEmployee__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MaxSalary__c</fullName>
        <label>MaxSalary</label>
        <summarizedField>NEmployee__c.Salary__c</summarizedField>
        <summaryForeignKey>NEmployee__c.Department__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MinSalary__c</fullName>
        <label>MinSalary</label>
        <summarizedField>NEmployee__c.Salary__c</summarizedField>
        <summaryForeignKey>NEmployee__c.Department__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Office_Director_Email__c</fullName>
        <label>Office Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipName>Department</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SumSalary__c</fullName>
        <label>SumSalary</label>
        <summarizedField>NEmployee__c.Salary__c</summarizedField>
        <summaryForeignKey>NEmployee__c.Department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>DepartmentN</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>